# composify_core

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
composify/: __init__.py  __init__.pyi  builder.py  core.pyi  errors.py  qualifiers.py  registry.pyi  rules.py  rules.pyi  solutions.pyi
composify/core/: __init__.py  __init__.pyi  metadata.pyi  registry.pyi  rules.pyi  solutions.pyi  solver.pyi
composify/metadata/: __init__.py  attributes.py  base.py  qualifiers.py  set.pyi
composify_core/: rules.pyi
src/: errors.rs  lib.rs  metadata.rs  registry.rs  rules.rs  solutions.rs  solve_parameters.rs  solver.rs  type_info.rs
tests/: conftest.py  test_core_types.py  test_hashing.py  test_rule_hashing.py  test_rule_registry.py  test_solving.py  utils.py
tests/unit/: test_async_construction.py  test_core_types.py  test_cyclic_dependency.py  test_hashing.py  test_inherited_types.py  test_named_resolution.py  test_rule.py  test_solving.py  test_sync_construction.py
